# MyCry

./: CMakeLists.txt  Makefile  cry_dec.bat  cry_enc.bat
lib/pkgconfig/: libsodium.pc
src/: file_info.c  file_info.h  main.c  simple_crc.c  simple_crc.h  simple_png.cpp  simple_png.h
